<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_of_players"
        android:layout_marginTop="5.0dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/no_of_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:entries="@array/player_array"
        android:prompt="@string/no_of_players" />

    <Button
        android:id="@+id/play"
        android:layout_width="120.0dp"
        android:layout_height="50.0dp"
        android:layout_gravity="center"
        android:layout_marginTop="15.0dip"
        android:text="@string/play"
        android:textStyle="bold|italic" />

</LinearLayout>
