<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/begin"
        android:textColor="@color/black"
        android:textSize="14.0sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sound_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sound"
        android:padding="10dp"
        android:textColor="@color/red"
        android:textSize="25.0sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/def_ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center"
        android:padding="5dip"
        android:text="@string/define"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ans_press"
        android:layout_width="120.0dp"
        android:layout_height="40.0dp"
        android:layout_gravity="center"
        android:layout_marginTop="30.0dip"
        android:padding="10dp"
        android:text="@string/ans"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dp"
            android:padding="20dp"
            android:gravity="center_vertical|center"
            android:text="@string/ans"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/correct"
                android:layout_width="80.0dip"
                android:layout_height="80.0dip"
                android:background="@xml/check_button" />

            <Button
                android:id="@+id/wrong"
                android:layout_width="80.0dip"
                android:layout_height="80.0dip"
                android:background="@xml/x_button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>