<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/begin"
        android:textColor="@color/black"
        android:textSize="14.0sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sound"
        android:textColor="@color/red"
        android:textSize="18.0sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:textColor="@color/black"
            android:textSize="10.0sp" />

        <TextView
            android:id="@+id/example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_example"
            android:textColor="@color/red"
            android:textSize="10.0sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="100" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5.0dp"
                android:background="@color/b_green"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/green"
                    android:layout_width="60.0dp"
                    android:layout_height="60.0dp"
                    android:layout_marginLeft="10.0dp"
                    android:background="@xml/green_button"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/g_def"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5.0dip"
                    android:gravity="left|center"
                    android:text="@string/define"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5.0dp"
                android:background="@color/b_orange"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/orange"
                    android:layout_width="60.0dp"
                    android:layout_height="60.0dp"
                    android:layout_marginLeft="10.0dp"
                    android:background="@xml/orange_button"
                    android:gravity="center_vertical"
                    android:text="" />

                <TextView
                    android:id="@+id/o_def"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5.0dip"
                    android:gravity="left|center"
                    android:text="@string/define"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5.0dp"
                android:background="@color/b_red"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/red"
                    android:layout_width="60.0dp"
                    android:layout_height="60.0dp"
                    android:layout_marginLeft="10.0dp"
                    android:background="@xml/red_button"
                    android:gravity="center_vertical"
                    android:text="" />

                <TextView
                    android:id="@+id/r_def"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5.0dip"
                    android:gravity="left|center"
                    android:text="@string/define"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5.0dp"
                android:text="@string/option"
                android:textColor="@color/black"
                android:textSize="14.0dip"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5.0dp"
                android:background="@color/b_black"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/black"
                    android:layout_width="60.0dp"
                    android:layout_height="60.0dp"
                    android:layout_marginLeft="10.0dp"
                    android:background="@xml/black_button"
                    android:gravity="center_vertical"
                    android:text="" />

                <TextView
                    android:id="@+id/b_def"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5.0dip"
                    android:gravity="left|center"
                    android:text="@string/define"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/score"
            android:layout_width="90.0dp"
            android:layout_height="40.0dp"
            android:layout_gravity="center"
            android:layout_marginTop="5.0dip"
            android:text="@string/scores"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/next"
            android:layout_width="120.0dp"
            android:layout_height="40.0dp"
            android:layout_gravity="center"
            android:layout_marginTop="5.0dip"
            android:text="@string/next"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/exit"
            android:layout_width="90.0dp"
            android:layout_height="40.0dp"
            android:layout_gravity="center"
            android:layout_marginTop="5.0dip"
            android:text="@string/exit"
            android:textStyle="bold|italic" />
    </LinearLayout>

</LinearLayout>